Se agrego funcion con arrays

--- a/index.html
+++ b/index.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="style.css">
+
     <title>Calculo de promedios</title>
 </head>
 <body>
 
     <h1>Calculo de promedios</h1>
 
-    <form action="">
+    <div class="contenedor">
 
-        <input type="text" id="nombre" placeholder="Ingresa nombre del alumno" >
-        <input type="text" id="apellido" placeholder="Ingresa Apellido del alumno" >
-        <input type="number" id="nota1" placeholder="Ingresa nota del 1° parcial" >
-        <input type="number" id="nota2" placeholder="Ingresa nota del 2° parcial" >
+        <form class="formulario" action="">
 
-        <button id="boton" type="reset" onclick="capturar();">Calcular</button>
+            <input type="text" id="nombre" placeholder="Ingresa nombre del alumno" required >
+            <input type="text" id="apellido" placeholder="Ingresa Apellido del alumno" required>
+            <input type="number" id="nota1" placeholder="Ingresa nota del 1° parcial" required >
+            <input type="number" id="nota2" placeholder="Ingresa nota del 2° parcial" required>
+
+            <button id="boton" type="reset" onclick="capturar();">Calcular</button>
 
 
 
-    </form>
+        </form>
+    </div>
 
-    <script src="app.js"></script>
+<script src="app.js"></script>
     
 </body>
 </html>
