Se agrego clase y se agregaron funciones para ardenar arrays (desafio comp)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
             <button id="boton" type="reset" onclick="capturar();">Calcular</button>
 
+            <button id="boton" type="reset" onclick="ordenarPorPromedio();">Ordenar por promedio (de Mayor a menor)</button>
+
+            <button id="boton" type="reset" onclick="ordenarPorApellido();">Ordenar por Apellido </button>
+
 
 
         </form>
